--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link  href="https://www.myfonts.com/fonts/namela/madani-arabic"  rel="stylesheet"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <title>React App</title>
