--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link  href="https://www.myfonts.com/fonts/namela/madani-arabic"  rel="stylesheet"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
-    <title>React App</title>
+    <title>i-validate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
